--- a/styles/base.css
+++ b/styles/base.css
@@ -9,6 +9,10 @@
     --white: #ffffff;
 }
 
+html {
+    font-size: 110%;
+}
+
 body {
     all: unset;
     font-family: 'Inter', sans-serif;
@@ -17,24 +21,22 @@ body {
 }
 
 header {
-    display: flex;
+    display: block;
     background-color: var(--white);
     align-items: center;
     justify-content: space-around;
     text-align: center;
     gap: 1.5rem;
-    padding: 1rem 2rem 1rem 2rem;
+    padding: .5rem 2rem .5rem 2rem;
 }
 
-img {
+#profile-picture {
     width: 8rem;
-    filter: contrast(110%);
+    filter: contrast(130%);
 }
 
 nav {
     font-family: 'Fira Mono', monospace;
-    /* display: flex;
-    flex-direction: column; */
 }
 
 nav ul {
@@ -46,27 +48,25 @@ nav ul {
 nav a {
 	display: block;
 	text-align: center;
-    padding: 01rem 2rem 1rem 2rem;
-    font-size: 1.2rem;
+    padding: .5rem 0;
+    font-size: 1.1rem;
     text-decoration: none;
-    border: 1px solid transparent;
+    border-bottom: 1px solid var(--blue);
     color: var(--blue);
 }
 
-nav a:hover {
-	border: 1px solid var(--red);
-    background-color: var(--red);
+nav a:focus {
+    color: var(--white)
 }
 
-.active {
+/* .active {
     color: var(--black);
     background-color: var(--blue);
     font-weight: 500;
-}
+} */
 
 h1, h2 {
     font-family: 'Noto Sans', sans-serif;
-    padding-bottom: 0.5rem;
     margin: 0;
 }
 
@@ -80,9 +80,8 @@ h1, h2 {
 
 main {
     background-color: var(--white);
-    padding: 3rem 2rem 3rem 2rem;
+    padding: 2rem 2rem 3rem 2rem;
     display: grid;
-
 }
 
 main, header, nav a{
@@ -113,9 +112,8 @@ main, header, nav a{
 }
 
 .card div {
-    justify-content: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin: 1.5rem auto;
+    width: fit-content;
 }
 
 footer p {
