--- a/styles/base.css
+++ b/styles/base.css
@@ -46,7 +46,8 @@ nav ul {
 }
 
 nav a {
-	display: block;
+	display: flex;
+    flex-direction: column;
 	text-align: center;
     padding: .5rem 0;
     font-size: 1.1rem;
