feat: add dynamic menu in mobile

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -5,6 +5,21 @@
 
     header {
         display: flex;
+        max-width: 900px;
+        margin: 0 auto;
+        padding: 0;
+        border-radius: 4px;
+    }
+
+    .menu-button-container {
+        display: none;
+    }
+
+    nav {
+        display: flex;
+        max-width: 900px;
+        margin: 0 auto;
+        border-radius: 4px;
     }
 
     nav ul {
@@ -36,4 +51,11 @@
     .title {
         text-align: left;
     }
+
+    footer {
+        max-width: 900px;
+        margin: 0 auto;
+        border-radius: 4px;
+    }
+    
 }
