--- a/styles/base.css
+++ b/styles/base.css
@@ -16,13 +16,13 @@ html {
 body {
     all: unset;
     font-family: 'Inter', sans-serif;
-    background-color: var(--black);
     color: var(--black);
 }
 
 header {
     display: block;
-    background-color: var(--white);
+    background-color:#38dbff;
+    border-radius: 4px;
     align-items: center;
     justify-content: space-around;
     text-align: center;
@@ -35,8 +35,28 @@ header {
     filter: contrast(130%);
 }
 
+.menu-button-container {
+    background-color:black;
+    border-radius: 4px;
+    display: flex;
+    width: 50px;
+    justify-content: center;
+    margin: 0 0 auto auto;
+}
+
+.menu-button {
+    width: 40px;
+    text-align: right;
+}
+    
 nav {
     font-family: 'Fira Mono', monospace;
+    background-color: #000000;
+    display: none;
+}
+
+nav.show {
+    display: block;
 }
 
 nav ul {
@@ -60,12 +80,6 @@ nav a:focus {
     color: var(--white)
 }
 
-/* .active {
-    color: var(--black);
-    background-color: var(--blue);
-    font-weight: 500;
-} */
-
 h1, h2 {
     font-family: 'Noto Sans', sans-serif;
     margin: 0;
@@ -81,7 +95,7 @@ h1, h2 {
 
 main {
     background-color: var(--white);
-    padding: 2rem 2rem 3rem 2rem;
+    padding: 2rem 0 3rem 0;
     display: grid;
 }
 
@@ -94,6 +108,7 @@ main, header, nav a{
 .card {
     width: 100%;
     border: 1px solid black;
+    box-sizing: border-box;
     border-radius: 4px;
     margin: 1rem auto;
 }
@@ -117,6 +132,12 @@ main, header, nav a{
 .card div {
     margin: 1.5rem auto;
     width: fit-content;
+}
+
+footer {
+    background-color: var(--black);
+    border-radius: 4px;
+    padding: 1rem 0;
 }
 
 footer p {
