--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -61,6 +61,15 @@
     justify-content: space-evenly;
   }
 
+  .event-card-title {
+    margin-top: 0;
+  }
+
+  .event-card p {
+    margin-top: 1rem;
+    margin-bottom: auto;
+  }
+
   .event-1 {
     grid-column: 4/7;
   }
@@ -82,6 +91,7 @@
   .business-section{
     display: grid;
     grid-template-columns: repeat(16, 1fr);
+    margin-top: 1rem;
   }
 
   .business-section h2 {
@@ -97,6 +107,12 @@
     margin: 0 1rem 1rem 0;
   }
 
+  .business-card {
+    border: none;
+    border-bottom-left-radius: 32px;
+    box-shadow: var(--accent1-color) 0px 3px 16px 0px;
+  }
+
   .business-1 {
     grid-column: 4/10;
     grid-row: 2/4;
@@ -105,6 +121,7 @@
   .business-2 {
     grid-column: 11/17;
     grid-row: 2/4;
+    margin-right: .2rem;
   }
 
   .business-3 {
@@ -115,6 +132,24 @@
   .business-4 {
     grid-column: 11/17;
     grid-row: 6/8;
+    margin-right: .2rem;
   }
 
+  .business-card p {
+    margin-bottom: 1rem;
+  }
+
+  .business-card h3 {
+    margin-top: 1rem;
+  }
+
+  .business-card h3,
+  .business-card p{
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .business-card-button {
+    margin-top: auto;
+  }
 }
