--- a/styles/base.css
+++ b/styles/base.css
@@ -68,9 +68,8 @@ header {
 }
 
 .dark-mode-container {
-    display: flex;
-    background-color: var(--primary-color);
-    padding: .3rem;
+    width: 50px;
+    height: 50px;
     border-radius: 4px;
     position: absolute;
     top: 10px;
@@ -78,8 +77,12 @@ header {
 }
 
 .dark-light-button {
-    width: 40px;
-    align-self: center;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    font-size: 40px;
+    border-radius: 4px;
+    border: none;
 }
 
 #profile-picture {
@@ -88,16 +91,17 @@ header {
 }
 
 .menu-button-container {
-    background-color: var(--accent3-color);
     border-radius: 4px;
     display: flex;
-    width: 40px;
+    font-size: 40px;
     justify-content: center;
     margin: .2rem auto;
 }
 
 .menu-button {
-    width: 30px;
+    background-color: var(--accent3-color);
+    color: white;
+    border-radius: 4px;
 }
 /* END of Header Section*/
     
@@ -105,7 +109,7 @@ header {
 nav {
     font-family: var(--nav-font);
     background-color: var(--primary-color);
-    margin-bottom: 1rem;
+    margin: 1rem auto;
     display: none; /* Nav hidden until button clicked*/
 }
 
@@ -135,6 +139,38 @@ nav a:focus {
 /* END of Navigation Section*/
 
 /* Main Section */
+.hero-container {
+    display: flex;
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.hero-label {
+    font-size: 1.2rem;
+    position: absolute;
+    bottom: 5%;
+    left: 10%;
+    right: 10%;
+    background-color: var(--accent3-color);
+    color: white;;
+    padding: .5rem;
+    text-align: center;
+    border-radius: 4px;
+    box-shadow: 1px 1px 6px white;
+}
+
+.hero-container picture {
+    width: 100%;
+}
+
+.hero-image {
+    width: 100%;
+    height: auto;
+    max-height: 400px;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
 .title-container {
     background-color: var(--primary-color);
     border-radius: 4px;
@@ -162,7 +198,7 @@ main.dark-mode {
 }
 
 main, header, nav a{
-    max-width: 900px;
+    max-width: 960px;
     margin: 0 auto;
     border-radius: 4px;
 }
@@ -215,6 +251,17 @@ main, header, nav a{
 .card a {
     text-decoration: none;
     color: black;
+}
+
+.location-frame-container {
+    max-width: 960px;
+    margin: 1rem auto;
+}
+
+.location-frame {
+    width: 100%;
+    height: auto;
+    border-radius: 4px;
 }
 
 footer {
