--- a/styles/larger.css
+++ b/styles/larger.css
@@ -5,7 +5,6 @@
 
     header {
         display: flex;
-        max-width: 900px;
         margin: 0 auto;
         padding: 0;
         border-radius: 4px;
@@ -17,7 +16,7 @@
 
     nav {
         display: flex;
-        max-width: 900px;
+        max-width: 960px;
         margin: 0 auto;
         border-radius: 4px;
     }
@@ -26,7 +25,6 @@
         display: flex;
         margin: 0 auto;
         justify-content: space-evenly;
-        max-width: 900px;
     }
 
     nav a {
@@ -44,6 +42,24 @@
         column-gap: 2rem;
     }
 
+    .hero-container
+    {
+        grid-column: 1/3;
+    }
+
+    .hero-label {
+        font-size: 1.5rem;
+        bottom: 10%;
+        left: 25%;
+        right: 25%;
+        background-color: var(--accent3-color);
+        color: white;;
+        padding: .5rem;
+        text-align: center;
+        border-radius: 4px;
+        box-shadow: 1px 1px 6px white;
+    }
+
     .title-container {
         grid-column: 1/3;
     }
@@ -54,7 +70,7 @@
     }
 
     footer {
-        max-width: 900px;
+        max-width: 960px;
         margin: 0 auto;
         border-radius: 4px;
     }
