--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -10,6 +10,10 @@
   
 
   /* Header and nav */
+  header {
+    min-width: 1024px;
+  }
+
   .header-title-container {
     display: flex;
     gap: 10px;
@@ -26,6 +30,7 @@
 
   nav {
     display: flex;
+    min-width: 1024px;
   }
 
   nav ul {
@@ -38,11 +43,51 @@
 
   /* Hero Section */
   .hero-container {
+    min-width: 1024px;
+
     margin-top: 0;
   }
 
   .hero-header {
     padding: 2rem;
+  }
+
+  /* Discover Page*/
+  .discover-main {
+    min-width: 1024px;
+    margin: 0 auto 1rem auto;
+  }
+
+  .info-section {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr 1fr;  }
+
+  .vertical-division {
+    grid-column: 2;
+    grid-row: 1/3;
+    border: 4px solid #45c4b144;
+    border-radius: 4px;
+  }
+
+  .info-section h3,
+  .info-section p {
+    grid-column: 1/2;
+    border-radius: 4px;
+    padding: 0 1rem;
+  }
+
+  .side-image {
+    grid-column: 3/5;
+    grid-row: 1/3;
+    border-radius: 4px;
+    padding: 0 1rem;
+    align-self: center;
+  }
+
+  .side-image img {
+    border-radius: 4px;
+    width: 100%;
+    height: auto;
   }
 
 
@@ -164,6 +209,10 @@
 
 
   /* Footer */
+  footer {
+    min-width: 1024px;
+  }
+
   footer img {
     width: 30px;
   }
