--- a/chamber/styles/desktop.css
+++ b/chamber/styles/desktop.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 1024px) {
   html {
-    font-size: 100%;
+    font-size: 120%;
   }
 
   /* Header and nav */
@@ -21,13 +21,17 @@
 
   /* Hero Section */
   .hero-container {
-    width: 70%;
+    width: 60%;
     margin: 1rem auto;
+  }
+
+  .hero-container img {
+    object-fit: cover
   }
 
   /* Main Section */
   main {
-    width: 70%;
+    max-width: 1200px;
     margin: 0 auto;
   }
 
@@ -35,5 +39,11 @@
   .site-footer {
     justify-content: center;
     gap: 60px;
+  }
+
+  header,
+  nav,
+  footer {
+    min-width: 1024px;
   }
 }
