--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -10,10 +10,6 @@
   
 
   /* Header and nav */
-  header {
-    min-width: 1024px;
-  }
-
   .header-title-container {
     display: flex;
     gap: 10px;
@@ -30,7 +26,6 @@
 
   nav {
     display: flex;
-    min-width: 1024px;
   }
 
   nav ul {
@@ -43,8 +38,6 @@
 
   /* Hero Section */
   .hero-container {
-    min-width: 1024px;
-
     margin-top: 0;
   }
 
@@ -54,13 +47,15 @@
 
   /* Discover Page*/
   .discover-main {
-    min-width: 1024px;
     margin: 0 auto 1rem auto;
   }
 
   .info-section {
     display: grid;
-    grid-template-columns: 1fr auto 1fr 1fr;  }
+    grid-template-columns: 1fr auto 1fr 1fr;
+    grid-template-rows: 3rem auto;
+    margin-bottom: 4rem;
+  }
 
   .vertical-division {
     grid-column: 2;
@@ -68,13 +63,17 @@
     border: 4px solid #45c4b144;
     border-radius: 4px;
   }
+  
+  .info-section > .vertical-division {
+    padding: 0;
+  }
 
   .info-section h3,
   .info-section p {
     grid-column: 1/2;
     border-radius: 4px;
     padding: 0 1rem;
-  }
+  } 
 
   .side-image {
     grid-column: 3/5;
@@ -88,6 +87,23 @@
     border-radius: 4px;
     width: 100%;
     height: auto;
+  }
+
+  .info-section.right-text {
+    grid-template-columns: 1fr 1fr auto 1fr;
+  }
+
+  section.right-text > .side-image {
+    grid-column: 1/3;
+  }
+
+  section.right-text > .vertical-division {
+    grid-column: 3;
+  }
+
+  section.right-text > h3,
+  section.right-text > p {
+    grid-column: 4/5;
   }
 
 
@@ -209,10 +225,6 @@
 
 
   /* Footer */
-  footer {
-    min-width: 1024px;
-  }
-
   footer img {
     width: 30px;
   }
