--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -53,13 +53,17 @@
   .info-section {
     display: grid;
     grid-template-columns: 1fr auto 1fr 1fr;
-    grid-template-rows: 3rem auto;
+    grid-template-rows: auto;
     margin-bottom: 4rem;
+  }
+
+  .info-text {
+    grid-row: 1/2;
+    align-self: center;
   }
 
   .vertical-division {
     grid-column: 2;
-    grid-row: 1/3;
     border: 4px solid #45c4b144;
     border-radius: 4px;
   }
@@ -70,16 +74,12 @@
 
   .info-section h3,
   .info-section p {
-    grid-column: 1/2;
-    border-radius: 4px;
-    padding: 0 1rem;
+    padding: 0 1rem 1rem 1rem;
   } 
 
   .side-image {
     grid-column: 3/5;
-    grid-row: 1/3;
     border-radius: 4px;
-    padding: 0 1rem;
     align-self: center;
   }
 
@@ -87,6 +87,20 @@
     border-radius: 4px;
     width: 100%;
     height: auto;
+    box-shadow: 2px 2px 16px var(--accent1-color);
+    transition: box-shadow .5s;
+  }
+
+  figure {
+    transition: transform .5s; /* Animation */
+  }
+
+  figure:hover {
+    transform: scale(1.02); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
+
+  .side-image img:hover {
+    box-shadow: 4px 4px 24px var(--accent1-color);
   }
 
   .info-section.right-text {
@@ -95,6 +109,13 @@
 
   section.right-text > .side-image {
     grid-column: 1/3;
+    grid-row: 1/2;
+  }
+
+  section.right-text > .info-text {
+    grid-column: 4/5;
+    grid-row: 1/2;
+    align-self: center;
   }
 
   section.right-text > .vertical-division {
