--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -251,7 +251,20 @@ main {
 }
 /* END of Directory widget section */
 
+
 /* Discover Page */
+.visits-count {
+  padding: 1rem;
+  margin-bottom: 2rem;
+  border-top: 2px solid #0120302f;
+  border-bottom: 2px solid #0120302f;
+}
+
+.visits-count p {
+  text-align: center;
+  font-style: italic;
+}
+
 .side-image figcaption {
   text-align: center;
   font-size: .8rem;
