--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -222,28 +222,55 @@ main {
 }
 
 
-/* Mobile. Weather widget */
-.weather-widget {
-  margin: 1rem 0;
-  width: 100%;
-  overflow: hidden;
+/* Mobile. Weather card */
+.weather-card {
+  box-shadow: 2px 2px 8px var(--accent1-color);
+
+  border-radius: 8px;
+
+  background: #56CCF2;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  max-width: 300px;
+  width: 80%;
+  margin: 1rem auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  padding: 1.5rem;
+  font-size: 2rem;
 }
 
-.moving-text {
-  display: inline-block;
-  animation: marquee 10s linear infinite;
-  white-space: nowrap;
+.weather-text {
+  text-align: center;
+  font-weight: 300;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-@keyframes marquee {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(-100%);
+.weather-measure {
+  font-weight: 500;
+  text-shadow: 2px 2px 4px var(--primary-color);
+}
+
+@media screen and (max-width: 400px) {
+  .weather-card {
+    grid-template-columns: 1fr;
+    row-gap: 1.5rem;
   }
 }
-/* END of Mobile Weather Widget*/
+
+.weather-city {
+  font-size: 1.2rem;
+}
+
+.weather-image {
+  filter: blur(1px);
+}
+
+/* END of Mobile Weather card*/
 
 
 /* Directory widget section */
